--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "umi-serve": "^1.9.10"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": "14.x"
   },
   "gitHooks": {
     "commit-msg": "fabric verify-commit"
