--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@umijs/route-utils": "^2.0.0",
     "antd": "^4.17.0",
     "classnames": "^2.3.0",
+    "firebase": "^9.6.7",
     "lodash": "^4.17.0",
     "moment": "^2.29.0",
     "omit.js": "^2.0.2",
