--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gh-pages": "gh-pages -d dist",
     "i18n-remove": "pro i18n-remove --locale=zh-CN --write",
     "postinstall": "umi g tmp",
-    "lint": "umi g tmp && npm run lint:js && npm run lint:style && npm run lint:prettier && npm run tsc",
+    "lint": "umi g tmp && npm run lint:js && npm run lint:style && npm run lint:prettier",
     "lint-staged": "lint-staged",
     "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx ",
     "lint:fix": "eslint --fix --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src && npm run lint:style",
@@ -32,7 +32,8 @@
     "test": "umi test",
     "test:component": "umi test ./src/components",
     "test:e2e": "node ./tests/run-tests.js",
-    "tsc": "tsc --noEmit"
+    "tsc": "tsc --noEmit",
+    "commit": "git-cz"
   },
   "lint-staged": {
     "**/*.less": "stylelint --syntax less",
@@ -53,11 +54,11 @@
     "@ant-design/pro-layout": "^6.32.7",
     "@ant-design/pro-provider": "^1.5.6",
     "@ant-design/pro-table": "^2.62.8",
-    "@babel/plugin-proposal-decorators": "^7.16.7",
     "@umijs/route-utils": "^2.0.0",
     "antd": "^4.17.0",
     "classnames": "^2.3.0",
-    "firebase": "^9.6.7",
+    "firebase": "^8.2.3",
+    "immutable": "^4.0.0",
     "lodash": "^4.17.0",
     "moment": "^2.29.0",
     "omit.js": "^2.0.2",
@@ -68,11 +69,13 @@
     "react-dev-inspector": "^1.7.0",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.2.0",
+    "react-quill": "^1.3.5",
     "umi": "^3.5.0",
     "umi-request": "^1.0.8"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.1.0",
+    "@babel/plugin-proposal-decorators": "^7.17.2",
     "@playwright/test": "^1.17.0",
     "@types/express": "^4.17.0",
     "@types/history": "^4.7.0",
