--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "antd": "^4.17.0",
     "classnames": "^2.3.0",
     "firebase": "^8.2.3",
+    "git-cz": "^4.8.0",
     "immutable": "^4.0.0",
     "lodash": "^4.17.0",
     "moment": "^2.29.0",
