--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "umi-serve": "^1.9.10"
   },
   "engines": {
-    "node": "14.x"
+    "node": "14.15.3"
   },
   "gitHooks": {
     "commit-msg": "fabric verify-commit"
