--- a/package.json
+++ b/package.json
@@ -49,11 +49,12 @@
   ],
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@ant-design/pro-descriptions": "^1.10.36",
+    "@ant-design/pro-descriptions": "^1.10.49",
     "@ant-design/pro-form": "^1.52.14",
     "@ant-design/pro-layout": "^6.32.7",
     "@ant-design/pro-provider": "^1.5.6",
     "@ant-design/pro-table": "^2.62.8",
+    "@ant-design/pro-utils": "^1.35.1",
     "@umijs/route-utils": "^2.0.0",
     "antd": "^4.17.0",
     "classnames": "^2.3.0",
