--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
   ],
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@ant-design/pro-descriptions": "^1.10.46",
+    "@ant-design/pro-descriptions": "^1.0.1",
     "@ant-design/pro-form": "^1.52.14",
     "@ant-design/pro-layout": "^6.32.7",
     "@ant-design/pro-provider": "^1.5.6",
+    "@ant-design/pro-skeleton": "^1.0.5",
     "@ant-design/pro-table": "^2.62.8",
     "@ant-design/pro-utils": "^1.35.0",
     "@umijs/route-utils": "^2.0.0",
