--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@ant-design/pro-provider": "^1.5.6",
     "@ant-design/pro-skeleton": "^1.0.5",
     "@ant-design/pro-table": "^2.62.8",
+    "@ant-design/pro-utils": "^1.35.2",
     "@umijs/route-utils": "^2.0.0",
     "antd": "^4.17.0",
     "classnames": "^2.3.0",
