--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
     "prop-types": "^15.8.1",
     "rc-menu": "^9.1.0",
     "rc-util": "^5.16.0",
-    "react": "^16.8.6",
+    "react": "^17.0.2",
     "react-dev-inspector": "^1.7.0",
-    "react-dom": "^17.0.0",
+    "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.0",
-    "react-quill": "^1.3.5",
+    "react-quill": "^2.0.0-beta.4",
     "umi": "^3.5.0",
     "umi-request": "^1.0.8"
   },
